# ParrotSpeech

./: .gitignore  CREATE_PACKAGE.md  ParrotSpeech Viability Analysis.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  synthesis.ipynb
matcha/: app.py  cli.py
matcha/models/: matcha_tts.py
matcha/onnx/: export.py  infer.py
matcha/utils/: get_durations_from_trained_model.py
parrotspeech/: api.py  pyproject.toml  socket_server.py
parrotspeech/eval/: eval_infer_batch.py  eval_librispeech_test_clean.py  eval_seedtts_testset.py  utils_eval.py
parrotspeech/inference/: README.md  infer_cli.py  infer_gradio.py  speech_edit.py  utils_infer.py
parrotspeech/inference/examples/basic/: basic.toml
parrotspeech/inference/examples/multi/: story.toml
parrotspeech/model/: __init__.py  cfm.py  dataset.py  modules.py  trainer.py  utils.py
parrotspeech/model/backbones/: dit.py  mmdit.py  unett.py
parrotspeech/scripts/: count_params_gflops.py
parrotspeech/train/: finetune_cli.py  finetune_gradio.py  train.py
parrotspeech/train/datasets/: prepare_csv_wavs.py  prepare_emilia.py  prepare_libritts.py  prepare_ljspeech.py  prepare_wenetspeech4tts.py
tests/: test_parrotspeech.py
