[build-system]
requires = ["setuptools >= 80.9.0", "setuptools-scm>=9.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."

[tool.setuptools]
packages = ["parrotspeech"]

[project]
name = "parrotspeech"
version = "0.1.1"
description = "ParrotSpeech"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes>0.37.0; platform_machine != 'arm64' and platform_system != 'Darwin'",
    "cached_path",
    "click",
    "datasets",
    "ema_pytorch",
    "gradio",
    "hydra-core>=1.3.0",
    "jieba",
    "librosa",
    "matplotlib",
    "numpy<=1.26.4",
    "pydantic<=2.10.6",
    "pydub",
    "pypinyin",
    "safetensors",
    "soundfile",
    "tomli",
    "torch>=2.0.0",
    "torchaudio",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "unidecode",
    "vocos",
    "wandb",
    "x_transformers",
]

[project.optional-dependencies]
eval = ["faster_whisper", "funasr", "jiwer", "modelscope", "zhconv", "zhon"]

[project.urls]
Homepage = "https://github.com/ParrotSpeech/ParrotSpeech"

[project.scripts]
"parrotspeech_inference" = "parrotspeech.inference.infer_cli:main"
"parrotspeech_inference-gradio" = "parrotspeech.inference.infer_gradio:main"
"parrotspeech_finetune-cli" = "parrotspeech.train.finetune_cli:main"
"parrotspeech_finetune-gradio" = "parrotspeech.train.finetune_gradio:main"
